@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.0.RELEASE</version>
+		<version>2.2.7.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -43,6 +43,7 @@
 		<module>../WorkFlowStorms</module>
 		<module>../WorkFlowArchiveFile</module>
 		<module>../WorkFlowMonitor</module>
+		<module>../WorkFlowWebServices</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -94,6 +95,11 @@
 			<dependency>
 				<groupId>com.gs.photos</groupId>
 				<artifactId>WorkFlowCommonStreams</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.gs.photos</groupId>
+				<artifactId>HbaseFilters</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -152,9 +158,6 @@
 					<configuration>
 						<source>13</source>
 						<target>13</target>
-						<compilerArgs>
-							<compilerArg>--enable-preview</compilerArg>
-						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
